Added example graph

--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
     </div>
 
     <div id="wrap">
+      <div class="box box-commit" id="box1">a47c3</div>
+      <div class="box box-commit" id="box2">b325c</div>
+      <div class="box box-commit" id="box3">c10b9</div>
+      <div class="box box-commit" id="box4">da985</div>
+      <div class="box box-commit" id="box5">ed489</div>
+      <div class="box box-branch" id="box6">maint</div>
+      <div class="box box-head" id="box8">HEAD</div>
+      <div class="box box-branch" id="box7">master</div>
+      <div class="box box-index" id="box9">Stage (Index)</div>
+      <div class="box box-dir" id="box10">Working Directory</div>
     </div> <!-- /wrap -->
 
     <footer>
